# interbuf

./: CMakeLists.txt
cmake/: interbufConfig.cmake.in
example/: sls.ib
interbufc/: CMakeLists.txt  basedefs.h  main.cc
interbufc/ast/: CMakeLists.txt  astnode.cc  astnode.h  class.cc  class.h  document.cc  document.h  idref.cc  idref.h  import.cc  import.h  lexer.cc  lexer.h  lexer.in.cpp  module.cc  module.h  parser.cc  parser.h  typename.cc  typename.h  typename_base.cc  typename_base.h  var.cc  var.h
interbufc/ast/parser/: CMakeLists.txt  misc.cc  typename.cc
interbufc/comp/: compiler.cc  compiler.h
interbufc/comp/ts/: CMakeLists.txt
